--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^10.0.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.14",
     "js-cookie": "^3.0.5",
